--- a/VTNET.Extensions/VTNET.Extensions.csproj
+++ b/VTNET.Extensions/VTNET.Extensions.csproj
@@ -10,7 +10,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	<PackageReadmeFile>readme.md</PackageReadmeFile>
 	<PackageLicenseFile>LICENSE</PackageLicenseFile>
-	<Version>7.0.5</Version>
+	<Version>7.0.4-beta</Version>
 
 	<!-- NuGet settings -->
 	<PackageId>VTNET.Extensions</PackageId>
